# exploration-cpp11

./: .gitignore  CMakeLists.txt  Invoke-CMakeBuild.ps1  Invoke-Main.ps1  README.md
sources/: CMakeLists.txt  main.cpp  main.cxx
sources/dependency_injection/headers/: InstancesManager.hxx
sources/dependency_injection/sources/: InstancesManager.Singletons.cxx  InstancesManager.cxx
sources/hosting/headers/: ApplicationHost.hxx  greeter.hxx
sources/hosting/sources/: ApplicationHost.cxx  greeter.cxx
sources/services/: CMakeLists.txt
sources/services/headers/: ManagedLifecycleService.hxx  ManagedThreadService.hxx  PingService.hxx
sources/services/sources/: PingService.cxx
